--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "body-parser": "^1.20.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "fs": "^0.0.1-security",
+    "image-to-base64": "^2.2.0",
     "openai": "^4.72.0"
   }
 }
