--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
+    "@types/fluent-ffmpeg": "^2.1.27",
     "body-parser": "^1.20.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "fluent-ffmpeg": "^2.1.3",
     "fs": "^0.0.1-security",
     "image-to-base64": "^2.2.0",
     "openai": "^4.72.0"
