--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "dependencies": {
+    "@google-cloud/vision": "^4.3.2",
     "body-parser": "^1.20.3",
     "buffer": "^6.0.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "fs": "^0.0.1-security",
     "image-to-base64": "^2.2.0",
+    "multer": "^1.4.5-lts.1",
     "openai": "^4.72.0",
     "path": "^0.12.7"
   }
